DeforaOS/Apps/Devel/src/c99/src/parser.c
/* $Id$ */
/* Copyright (c) 2008 Pierre Pronchery <khorben@defora.org> */
/* This file is part of DeforaOS Devel c99 */
/* c99 is not free software; you can redistribute it and/or modify it under the
 * terms of the Creative Commons Attribution-NonCommercial-ShareAlike 3.0
 * Unported as published by the Creative Commons organization.
 *
 * c99 is distributed in the hope that it will be useful, but WITHOUT ANY
 * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
 * A PARTICULAR PURPOSE.  See the Creative Commons Attribution-NonCommercial-
 * ShareAlike 3.0 Unported license for more details.
 *
 * You should have received a copy of the Creative Commons Attribution-
 * NonCommercial-ShareAlike 3.0 along with c99; if not, browse to
 * http://creativecommons.org/licenses/by-nc-sa/3.0/ */



#include <unistd.h>
#include <stdarg.h>
#include <stdlib.h>
#include <stdio.h>
#include <string.h>
#include <errno.h>
#include "common.h"
#include "tokenset.h"
#include "c99.h"
#include "../config.h"


/* private */
/* prototypes */
static int _parse_check(C99 * c99, TokenCode code);
static int _parse_error(C99 * c99, char const * format, ...);
static char const * _parse_get_string(C99 * c99);
static int _parse_in_set(C99 * c99, TokenSet set);
static int _parse_is_code(C99 * c99, TokenCode code);

/* grammar */
static int _translation_unit(C99 * c99);
static int _external_declaration(C99 * c99);
static int _function_definition(C99 * c99);
static int _declaration_specifiers(C99 * c99);
static int _storage_class_specifier(C99 * c99);
static int _type_specifier(C99 * c99);
static int _struct_or_union_specifier(C99 * c99);
static int _struct_or_union(C99 * c99);
static int _struct_declaration_list(C99 * c99);
static int _struct_declaration(C99 * c99);
static int _struct_declarator_list(C99 * c99);
static int _struct_declarator(C99 * c99);
static int _enum_specifier(C99 * c99);
static int _enumerator(C99 * c99);
static int _enumeration_constant(C99 * c99);
static int _typedef_name(C99 * c99);
static int _type_qualifier(C99 * c99);
static int _function_specifier(C99 * c99);
static int _declarator(C99 * c99);
static int _pointer(C99 * c99);
static int _type_qualifier_list(C99 * c99);
static int _direct_declarator(C99 * c99);
static int _identifier(C99 * c99);
static int _identifier_list(C99 * c99);
static int _parameter_type_list(C99 * c99);
static int _parameter_declaration(C99 * c99);
static int _abstract_declarator(C99 * c99);
static int _direct_abstract_declarator(C99 * c99);
static int _assignment_expr(C99 * c99);
static int _unary_expr(C99 * c99);
static int _postfix_expr(C99 * c99);
static int _argument_expression_list(C99 * c99);
static int _primary_expr(C99 * c99);
static int _type_name(C99 * c99);
static int _specifier_qualifier_list(C99 * c99);
static int _unary_operator(C99 * c99);
static int _assignment_operator(C99 * c99);
static int _conditional_expr(C99 * c99);
static int _logical_or_expr(C99 * c99);
static int _logical_and_expr(C99 * c99);
static int _inclusive_or_expr(C99 * c99);
static int _exclusive_or_expr(C99 * c99);
static int _and_expr(C99 * c99);
static int _equality_expr(C99 * c99);
static int _relational_expr(C99 * c99);
static int _shift_expr(C99 * c99);
static int _additive_expr(C99 * c99);
static int _multiplicative_expr(C99 * c99);
static int _cast_expr(C99 * c99);
static int _declaration_list(C99 * c99);
static int _declaration(C99 * c99);
static int _compound_statement(C99 * c99);
static int _block_item_list(C99 * c99);
static int _block_item(C99 * c99);
static int _statement(C99 * c99);
static int _labeled_statement(C99 * c99);
static int _constant_expr(C99 * c99);
static int _expression_statement(C99 * c99);
static int _expression(C99 * c99);
static int _selection_statement(C99 * c99);
static int _iteration_statement(C99 * c99);
static int _jump_statement(C99 * c99);
static int _init_declarator_list(C99 * c99);
static int _init_declarator(C99 * c99);
static int _initializer(C99 * c99);
static int _initializer_list(C99 * c99);
static int _designation(C99 * c99);
static int _designator_list(C99 * c99);
static int _designator(C99 * c99);


/* functions */
/* parse_check */
static int _parse_check(C99 * c99, TokenCode code)
{
	int ret = 0;

	if(!_parse_is_code(c99, code))
	{
		ret = _parse_error(c99, "Expected \"%s\"",
				code_get_string(code));
		while(c99_scan(c99) == 0
				&& c99->token != NULL
				&& !_parse_is_code(c99, code));
	}
	ret |= c99_scan(c99);
	return ret;
}


/* parse_error */
static int _parse_error(C99 * c99, char const * format, ...)
{
	Token * token = c99->token;
	va_list ap;

	c99->error_cnt++;
	if(token == NULL) /* XXX not very elegant */
		fputs(PACKAGE ": near end of file: error: ", stderr);
	else
		fprintf(stderr, "%s%s:%u, near \"%s\": error: ", PACKAGE ": ",
				token_get_filename(token),
				token_get_line(token), token_get_string(token));
	va_start(ap, format);
	vfprintf(stderr, format, ap);
	va_end(ap);
	fputc('\n', stderr);
	return 1;
}


/* parse_get_string */
static char const * _parse_get_string(C99 * c99)
{
	if(c99->token == NULL)
		return "EOF";
	return token_get_string(c99->token);
}


/* parse_in_set */
static int _parse_in_set(C99 * c99, TokenSet set)
{
	if(c99->token == NULL)
		return 0;
	return token_in_set(c99->token, set);
}


/* parse_is_code */
static int _parse_is_code(C99 * c99, TokenCode code)
{
	if(c99->token == NULL)
		return 0;
	return token_get_code(c99->token) == code;
}


/* grammar */
static int _translation_unit(C99 * c99)
	/* external-declaration { external-declaration } */
{
	int ret = 0;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	while(c99_scan(c99) == 0 && c99->token != NULL)
		ret |= _external_declaration(c99);
	return ret;
}


/* external_declaration */
static int _external_declaration(C99 * c99)
	/* function-definition | declaration */
{
	/* FIXME ambiguity between function definition and declaration */
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	if(_parse_in_set(c99, c99set_function_definition))
		return _function_definition(c99);
	else if(_parse_in_set(c99, c99set_declaration))
		return _declaration(c99);
	return _parse_error(c99, "Expected function definition or declaration");
}


/* function_definition */
static int _function_definition(C99 * c99)
	/* declaration-specifiers declarator [ declaration-list ]
	 * compound-statement */
{
	int ret = 0;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret |= _declaration_specifiers(c99);
	ret |= _declarator(c99);
	if(_parse_in_set(c99, c99set_declaration_list))
		ret |= _declaration_list(c99);
	ret |= _compound_statement(c99);
	return ret;
}


/* declaration-list */
static int _declaration_list(C99 * c99)
	/* declaration { declaration } */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret = _declaration(c99);
	while(_parse_in_set(c99, c99set_declaration))
		ret |= _declaration(c99);
	return ret;
}


/* declaration */
static int _declaration(C99 * c99)
	/* declaration-specifiers [ init-declarator-list ] */
{
	int ret = 0;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret |= _declaration_specifiers(c99);
	if(_parse_in_set(c99, c99set_init_declarator))
		ret |= _init_declarator_list(c99);
	return ret;
}


/* declaration-specifiers */
static int _declaration_specifiers(C99 * c99)
	/* storage-class-specifier [ declaration-specifiers ]
	 * type-specifier [ declaration-specifiers ]
	 * type-qualifier [ declaration-specifiers ]
	 * function-specifier [ declaration-specifiers ] */
{
	int ret = 0;
	int looped = 0;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	for(;;)
	{
		if(_parse_in_set(c99, c99set_storage_class_specifier))
			ret |= _storage_class_specifier(c99);
		else if(_parse_in_set(c99, c99set_type_specifier))
			ret |= _type_specifier(c99);
		else if(_parse_in_set(c99, c99set_type_qualifier))
			ret |= _type_qualifier(c99);
		else if(_parse_in_set(c99, c99set_function_specifier))
			ret |= _function_specifier(c99);
		else if(looped == 0)
			return _parse_error(c99, "Expected"
					" storage class specifier"
					", type specifier, type qualifier"
					" or function specifier");
		else
			break;
		looped = 1;
	}
	return ret;
}


/* storage-class-specifier */
static int _storage_class_specifier(C99 * c99)
	/* "typedef" | "extern" | "static" | "auto" | "register" */
{
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	return c99_scan(c99);
}


/* type-specifier */
static int _type_specifier(C99 * c99)
	/* void | char | short | int | long | float | double | signed | unsigned
	 * | _Bool | _Complex | _Imaginary | struct-or-union-specifier
	 * | enum-specifier | typedef-name */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	if(_parse_in_set(c99, c99set_struct_or_union_specifier))
		ret = _struct_or_union_specifier(c99);
	else if(_parse_in_set(c99, c99set_enum_specifier))
		ret = _enum_specifier(c99);
	else if(_parse_in_set(c99, c99set_typedef_name))
		ret = _typedef_name(c99);
	else
		ret = c99_scan(c99);
	return ret;
}


/* struct-or-union-specifier */
static int _struct_or_union_specifier(C99 * c99)
	/* struct-or-union [ identifier ] "{" struct-declaration-list "}"
	 * | struct-or-union identifier */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret = _struct_or_union(c99);
	if(_parse_is_code(c99, C99_CODE_IDENTIFIER))
	{
		ret |= _identifier(c99);
		if(!_parse_is_code(c99, C99_CODE_OPERATOR_LBRACE))
			return ret;
	}
	ret |= _parse_check(c99, C99_CODE_OPERATOR_LBRACE);
	ret |= _struct_declaration_list(c99);
	if(_parse_is_code(c99, C99_CODE_COMMA))
		ret |= c99_scan(c99);
	ret |= _parse_check(c99, C99_CODE_OPERATOR_RBRACE);
	return ret;
}


/* struct-or-union */
static int _struct_or_union(C99 * c99)
	/* "struct" | "union" */
{
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	return c99_scan(c99);
}


/* struct-declaration-list */
static int _struct_declaration_list(C99 * c99)
	/* struct-declaration { struct-declaration } */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret = _struct_declaration(c99);
	while(_parse_in_set(c99, c99set_struct_declaration))
		ret |= _struct_declaration(c99);
	return ret;
}


/* struct-declaration */
static int _struct_declaration(C99 * c99)
	/* specifier-qualifier-list struct-declarator-list ";" */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret = _specifier_qualifier_list(c99);
	ret |= _struct_declarator_list(c99);
	ret |= _parse_check(c99, C99_CODE_OPERATOR_SEMICOLON);
	return ret;
}


/* struct-declarator-list */
static int _struct_declarator_list(C99 * c99)
	/* struct-declarator { "," struct-declarator } */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret = _struct_declarator(c99);
	while(_parse_is_code(c99, C99_CODE_COMMA))
	{
		ret |= c99_scan(c99);
		ret |= _struct_declarator(c99);
	}
	return ret;
}


/* struct-declarator */
static int _struct_declarator(C99 * c99)
	/* declarator
	 * [ declarator ] ":" constant-expr */
{
	int ret = 0;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	if(!_parse_is_code(c99, C99_CODE_OPERATOR_COLON))
		ret |= _declarator(c99);
	if(_parse_is_code(c99, C99_CODE_OPERATOR_COLON))
	{
		ret |= c99_scan(c99);
		ret |= _constant_expr(c99);
	}
	return ret;
}


/* enum-specifier */
static int _enum_specifier(C99 * c99)
	/* enum [ identifier ] "{" enumerator { "," enumerator } [ ","] "}"
	 * enum identifier */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	ret = c99_scan(c99);
	if(_parse_is_code(c99, C99_CODE_IDENTIFIER))
	{
		ret |= _identifier(c99);
		if(!_parse_is_code(c99, C99_CODE_OPERATOR_LBRACE))
			return ret;
	}
	ret |= _parse_check(c99, C99_CODE_OPERATOR_LBRACE);
	ret |= _enumerator(c99);
	while(_parse_is_code(c99, C99_CODE_COMMA))
	{
		ret |= c99_scan(c99);
		if(!_parse_is_code(c99, C99_CODE_OPERATOR_RBRACE))
			ret |= _enumerator(c99);
		else
			break;
	}
	ret |= _parse_check(c99, C99_CODE_OPERATOR_RBRACE);
	return ret;
}


/* enumerator */
static int _enumerator(C99 * c99)
	/* enumeration-constant [ "=" constant-expression ] */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret = _enumeration_constant(c99);
	if(_parse_is_code(c99, C99_CODE_OPERATOR_EQUALS))
	{
		ret |= c99_scan(c99);
		ret |= _constant_expr(c99);
	}
	return ret;
}


/* enumeration-constant */
static int _enumeration_constant(C99 * c99)
	/* identifier */
{
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	return _identifier(c99);
}


/* typedef-name */
static int _typedef_name(C99 * c99)
	/* identifier */
{
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	return c99_scan(c99);
}


/* type-qualifier */
static int _type_qualifier(C99 * c99)
	/* "const" | "restrict" | "volatile" */
{
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	return c99_scan(c99);
}


/* function-specifier */
static int _function_specifier(C99 * c99)
	/* "inline" */
{
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	return c99_scan(c99);
}


/* declarator */
static int _declarator(C99 * c99)
	/* [ pointer ] direct-declarator */
{
	int ret = 0;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	if(_parse_in_set(c99, c99set_pointer))
		ret |= _pointer(c99);
	ret |= _direct_declarator(c99);
	return ret;
}


/* pointer */
static int _pointer(C99 * c99)
	 /* "*" [ type-qualifier-list ] { "*" [ type-qualifier-list ] } */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"*\" got \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	ret = c99_scan(c99);
	if(_parse_in_set(c99, c99set_type_qualifier_list))
		ret |= _type_qualifier_list(c99);
	while(_parse_in_set(c99, c99set_pointer))
	{
		ret |= c99_scan(c99);
		if(_parse_in_set(c99, c99set_type_qualifier_list))
			ret |= _type_qualifier_list(c99);
	}
	return ret;
}


/* type-qualifier-list */
static int _type_qualifier_list(C99 * c99)
	/* type-qualifier { type-qualifier } */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret = _type_qualifier(c99);
	while(_parse_in_set(c99, c99set_type_qualifier))
		ret |= _type_qualifier(c99);
	return ret;
}


/* direct-declarator */
static int _direct_declarator(C99 * c99)
	/* FIXME still recursive
	 * identifier
	 * "(" declarator ")"
	 * direct-declarator "[" (assignment-expression | "*") "]"
	 * direct-declarator "(" parameter-type-list ")"
	 * direct-declarator "(" [ identifier-list ] ")" */
{
	int ret;
	int code;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	if(_parse_is_code(c99, C99_CODE_OPERATOR_LPAREN))
	{
		c99_scan(c99);
		ret = _declarator(c99);
		ret |= _parse_check(c99, C99_CODE_OPERATOR_RPAREN);
	}
	else
		ret = _identifier(c99);
	while(_parse_is_code(c99, C99_CODE_OPERATOR_LPAREN)
			|| _parse_is_code(c99, C99_CODE_OPERATOR_LBRACKET))
	{
		code = token_get_code(c99->token);
		ret |= c99_scan(c99);
		if(code == C99_CODE_OPERATOR_LBRACKET)
		{
			if(_parse_is_code(c99, C99_CODE_OPERATOR_TIMES))
				ret |= c99_scan(c99);
			else
				ret |= _assignment_expr(c99);
			ret |= _parse_check(c99, C99_CODE_OPERATOR_RBRACKET);
		}
		else /* C99_CODE_OPERATOR_LPAREN */
		{
			if(_parse_in_set(c99, c99set_parameter_type_list))
				ret |= _parameter_type_list(c99);
			else if(_parse_in_set(c99, c99set_identifier_list))
				ret |= _identifier_list(c99);
			ret |= _parse_check(c99, C99_CODE_OPERATOR_RPAREN);
		}
	}
	return ret;
}


/* identifier */
static int _identifier(C99 * c99)
	/* identifier-nondigit { (identifier-nondigit | identifier-digit) } */
{
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	return c99_scan(c99);
}


/* identifier-list */
static int _identifier_list(C99 * c99)
	/* identifier { "," identifier } */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret = _identifier(c99);
	while(_parse_is_code(c99, C99_CODE_COMMA))
	{
		ret |= c99_scan(c99);
		ret |= _identifier(c99);
	}
	return ret;
}


/* parameter-type-list */
static int _parameter_type_list(C99 * c99)
	/* parameter-declaration { "," parameter-declaration } [ "," "..." ] */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret = _parameter_declaration(c99);
	while(_parse_is_code(c99, C99_CODE_COMMA))
	{
		ret |= c99_scan(c99);
		if(_parse_is_code(c99, C99_CODE_OPERATOR_DOTDOTDOT))
			return ret | c99_scan(c99);
		ret |= _parameter_declaration(c99);
	}
	return ret;
}


/* parameter-declaration */
static int _parameter_declaration(C99 * c99)
	/* declaration-specifiers [ (declarator | abstract-declarator) ] */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret = _declaration_specifiers(c99);
	/* FIXME ambiguity between declarator and abstract declarator */
	if(_parse_in_set(c99, c99set_abstract_declarator))
		ret |= _abstract_declarator(c99);
	else if(_parse_in_set(c99, c99set_declarator))
		ret |= _declarator(c99);
	return ret;
}


/* abstract-declarator */
static int _abstract_declarator(C99 * c99)
	/* pointer
	 * [ pointer ] direct-abstract-declarator */
{
	int ret = 0;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	if(_parse_in_set(c99, c99set_pointer))
		ret = _pointer(c99);
	if(_parse_in_set(c99, c99set_direct_abstract_declarator))
		ret |= _direct_abstract_declarator(c99);
	return ret;
}


/* direct-abstract-declarator */
static int _direct_abstract_declarator(C99 * c99)
	/* "(" abstract-declarator ")"
	 * [ direct-abstract-declarator ] "[" [ assignment-expr ] "]"
	 * direct-abstract-declarator "[" "*" "]"
	 * [ direct-abstract-declarator ] "(" [ parameter-type-list ] ")" */

{
	int ret;
	TokenCode code;

	/* FIXME verify if correct */
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	if(c99->token == NULL)
		return _parse_error(c99, "Unexpected end of file");
	else if((code = token_get_code(c99->token)) == C99_CODE_OPERATOR_LPAREN)
	{
		ret = c99_scan(c99);
		ret |= _abstract_declarator(c99);
		ret |= _parse_check(c99, C99_CODE_OPERATOR_RPAREN);
	}
	else if(code == C99_CODE_OPERATOR_LBRACKET)
	{
		ret = c99_scan(c99);
		if(!_parse_is_code(c99, C99_CODE_OPERATOR_RBRACKET))
			ret |= _assignment_expr(c99);
		ret |= _parse_check(c99, C99_CODE_OPERATOR_RBRACKET);
	}
	while(c99->token != NULL)
	{
		if((code = token_get_code(c99->token))
				== C99_CODE_OPERATOR_LPAREN)
		{
			ret |= c99_scan(c99);
			if(_parse_in_set(c99, c99set_parameter_type_list))
				ret |= _parameter_type_list(c99);
			ret |= _parse_check(c99, C99_CODE_OPERATOR_RPAREN);
		}
		else if(code == C99_CODE_OPERATOR_LBRACKET)
		{
			if(_parse_is_code(c99, C99_CODE_OPERATOR_TIMES))
				ret |= c99_scan(c99);
			else if(_parse_in_set(c99, c99set_assignment_expr))
				ret |= _assignment_expr(c99);
			ret |= _parse_check(c99, C99_CODE_OPERATOR_RBRACKET);
		}
		else
			break;
	}
	return ret;
}


/* assignment-expr */
static int _assignment_expr(C99 * c99)
	/* { unary-expr assignment-operator } conditional-expr */
{
	int ret = 0;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	/* FIXME heavily suspect conflict between unary and conditional */
	while(_parse_in_set(c99, c99set_unary_expr))
	{
		ret |= _unary_expr(c99);
		ret |= _assignment_operator(c99);
	}
	ret |= _conditional_expr(c99);
	return ret;
}


/* unary-expr */
static int _unary_expr(C99 * c99)
	/* FIXME still recursive
	 * postfix-expr
	 * ++ unary-expr
	 * -- unary-expr
	 * unary-operator cast-expr
	 * sizeof unary-expr
	 * sizeof "(" type-name ")" */
{
	int ret;
	int code;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	if(_parse_in_set(c99, c99set_postfix_expr))
		return _postfix_expr(c99);
	else if(c99->token == NULL)
		return _parse_error(c99, "Unexpected end of file");
	else if((code = token_get_code(c99->token)) == C99_CODE_OPERATOR_DPLUS
			|| code == C99_CODE_OPERATOR_DMINUS)
	{
		ret = c99_scan(c99);
		ret |= _unary_expr(c99);
	}
	else if(_parse_in_set(c99, c99set_unary_operator))
	{
		ret = _unary_operator(c99);
		ret |= _cast_expr(c99);
	}
	else if(code == C99_CODE_KEYWORD_SIZEOF)
	{
		ret = c99_scan(c99);
		if(_parse_is_code(c99, C99_CODE_OPERATOR_LPAREN))
		{
			ret |= c99_scan(c99);
			ret |= _type_name(c99);
			ret |= _parse_check(c99, C99_CODE_OPERATOR_RPAREN);
		}
		else
			ret |= _unary_expr(c99);
	}
	return ret;
}


/* postfix-expr */
static int _postfix_expr(C99 * c99)
	/* primary-expr
	 * postfix-expr "[" expression "]"
	 * postfix-expr "(" argument-expression-list-opt ")"
	 * postfix-expr "." identifier
	 * postfix-expr "->" identifier
	 * postfix-expr "++"
	 * postfix-expr "--"
	 * "(" type-name ")" "{" initializer-list "}"
	 * "(" type-name ")" "{" initializer-list "," "}" */
{
	int ret = 0;
	int code;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	if(_parse_in_set(c99, c99set_primary_expr))
		ret |= _primary_expr(c99);
	else if(_parse_is_code(c99, C99_CODE_OPERATOR_LPAREN))
	{
		ret |= c99_scan(c99);
		ret |= _type_name(c99);
		ret |= _parse_check(c99, C99_CODE_OPERATOR_RPAREN);
		ret |= _parse_check(c99, C99_CODE_OPERATOR_LBRACE);
		ret |= _initializer_list(c99);
		if(_parse_is_code(c99, C99_CODE_COMMA))
			ret |= c99_scan(c99);
		ret |= _parse_check(c99, C99_CODE_OPERATOR_RBRACE);
	}
	while(c99->token != NULL)
	{
		code = token_get_code(c99->token);
		if(code == C99_CODE_OPERATOR_LBRACKET)
		{
			ret |= c99_scan(c99);
			ret |= _expression(c99);
			ret |= _parse_check(c99, C99_CODE_OPERATOR_RBRACKET);
		}
		else if(code == C99_CODE_OPERATOR_LPAREN)
		{
			ret |= c99_scan(c99);
			if(!_parse_is_code(c99, C99_CODE_OPERATOR_RPAREN))
				ret |= _argument_expression_list(c99);
			ret |= _parse_check(c99, C99_CODE_OPERATOR_RPAREN);
		}
		else if(code == C99_CODE_OPERATOR_DOT
				|| code == C99_CODE_OPERATOR_MGREATER)
		{
			ret |= c99_scan(c99);
			ret |= _identifier(c99);
		}
		else if(code == C99_CODE_OPERATOR_DPLUS
				|| code == C99_CODE_OPERATOR_DMINUS)
			ret |= c99_scan(c99);
		else
			break;
	}
	return ret;
}


/* argument-expression-list */
static int _argument_expression_list(C99 * c99)
	/* assignment-expr { "," assignment-expr } */
{
	int ret;
#ifdef DEBUG
	unsigned int cnt = 1;

	fprintf(stderr, "DEBUG: %s() arg 1 \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	ret = _assignment_expr(c99);
	while(_parse_is_code(c99, C99_CODE_COMMA))
	{
		ret |= c99_scan(c99);
#ifdef DEBUG
		fprintf(stderr, "DEBUG: %s() arg %u \"%s\"\n", __func__, ++cnt,
				_parse_get_string(c99));
#endif
		ret |= _assignment_expr(c99);
	}
	return ret;
}


/* primary-expr */
static int _primary_expr(C99 * c99)
	/* identifier
	 * constant
	 * string-literal
	 * "(" expression ")" */
{
	int ret;
	int code;

	/* FIXME complete */
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	if(c99->token == NULL)
		return _parse_error(c99, "Unexpected end of file");
	else if((code = token_get_code(c99->token)) == C99_CODE_IDENTIFIER)
		return _identifier(c99);
	else if(code == C99_CODE_OPERATOR_LPAREN)
	{
		ret = c99_scan(c99);
		ret |= _expression(c99);
		ret |= _parse_check(c99, C99_CODE_OPERATOR_RPAREN);
		return ret;
	}
	else /* constant or string-litteral */
		return c99_scan(c99);
}


/* type-name */
static int _type_name(C99 * c99)
	/* specifier-qualifier-list [ abstract-declarator ] */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	ret = _specifier_qualifier_list(c99);
	if(_parse_in_set(c99, c99set_abstract_declarator))
		ret |= _abstract_declarator(c99);
	return ret;
}


/* specifier-qualifier-list */
static int _specifier_qualifier_list(C99 * c99)
	/* (type-specifier | type-qualifier) { (type-specifier | type-qualifier) } */
{
	int ret = 0;
	int looped = 0;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	for(;;)
	{
		if(_parse_in_set(c99, c99set_type_specifier))
			ret |= _type_specifier(c99);
		else if(_parse_in_set(c99, c99set_type_qualifier))
			ret |= _type_qualifier(c99);
		else if(looped == 0)
			ret |= _parse_error(c99, "Expected type specifier"
					" or type qualifier");
		else
			break;
		looped = 1;
	}
	return ret;
}


/* unary-operator */
static int _unary_operator(C99 * c99)
	/* "&" | "*" | "+" | "-" | "~" | "!" */
{
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() %s\n", __func__,
			_parse_get_string(c99));
#endif
	return c99_scan(c99);
}


/* assignment-operator */
static int _assignment_operator(C99 * c99)
	/* "=" | "*=" | "/=" | "%=" | "+=" | "-=" | "<<=" | ">>=" | "&=" | "^="
	 * | "|=" */
{
#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s()\n", __func__);
#endif
	return c99_scan(c99);
}


/* conditional-expr */
static int _conditional_expr(C99 * c99)
	/* logical-OR-expr [ "?" expr ":" conditional-expr ] */
{
	int ret;

#ifdef DEBUG
	fprintf(stderr, "DEBUG: %s() \"%s\"\n", __func__,
			_parse_get_string(c99));
#endif
	ret = _logical_or_expr(c99);
	if(_parse_is_code(c99, C99_CODE_OPERATOR_QUESTION))
	{
		ret |= c99_scan(c99);
		ret |= _expression(c99);
		ret |= _parse_check(c99, C99_CODE_OPERATOR_COLON);
		ret |= _conditional_expr(c99);
	}
	return ret;
}


/* logical-OR-expr */
static int _logical_or_expr(C99 * c99)
	/* logical-AND-expr { "||" logical-AND-expr } */
{
	int ret;
